# nQuantCpp

./: CMakeLists.txt  CMakeSettings.json  DivQuantizer.cpp  Dl3Quantizer.cpp  Dl3Quantizer.h  Dockerfile  EdgeAwareSQuantizer.cpp  GilbertCurve.cpp  LICENSE  MedianCut.cpp  NeuQuantizer.cpp  NeuQuantizer.h  PnnQuantizer.cpp  PnnQuantizer.h  README.md  Resource.h  SpatialQuantizer.cpp  WuQuantizer.cpp  WuQuantizer.h  bitmapUtilities.cpp  nQuantCpp.cpp  nQuantCpp.h  nQuantCpp.sln  nQuantCpp.vcxproj  stdafx.h
.github/workflows/: cmake.yml  codeql.yml
nQuant.cpp/: ReadMe.txt  nQuant.cpp  nQuant.cpp.aps  nQuant.cpp.rc  nQuant.cpp.vcxproj  nQuant.cpp.vcxproj.filters  nQuant.h  nQuantDlg.cpp  nQuantDlg.h  resource.h  stdafx.cpp  stdafx.h
nQuant.cpp/res/: nQuantcpp.rc2
nQuantCpp/: APNsgaIII.cpp  APNsgaIII.h  BlueNoise.cpp  BlueNoise.h  CIELABConvertor.cpp  CIELABConvertor.h  CMakeLists.txt  DblGNGGAQuantizer.cpp  DblGNGGAQuantizer.h  DblGNGQuantizer.cpp  DblGNGQuantizer.h  DivQuantizer.cpp  DivQuantizer.h  Dl3Quantizer.cpp  Dl3Quantizer.h  EdgeAwareSQuantizer.cpp  EdgeAwareSQuantizer.h  GifWriter.cpp  GifWriter.h  GilbertCurve.cpp  GilbertCurve.h  HilbertCurve.cpp  HilbertCurve.h  MedianCut.cpp  MedianCut.h  MoDEQuantizer.cpp  MoDEQuantizer.h  NeuQuantizer.cpp  NeuQuantizer.h  NsgaIII.cpp  NsgaIII.h  Otsu.cpp  Otsu.h  PnnLABGAQuantizer.cpp  PnnLABGAQuantizer.h  PnnLABQuantizer.cpp  PnnLABQuantizer.cs  PnnLABQuantizer.h  PnnQuantizer.cpp  PnnQuantizer.h  (+15 more)
